--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -22,10 +22,10 @@
 	<header>
 		<div class="grid-container">
 			<div class="grid-x grid-padding-x">
-				<a href="#about-me" class="cell large-auto">Radzio.com</a>
-				<a href="#about" class="cell large-auto">About</a>
-				<a href="#ourwork" class="cell large-auto">Portfolio</a>
-				<a href="#contact" class="cell large-auto">Contact</a>
+				<a href="#about-me" class="cell medium-9">Radzio.com</a>
+				<a href="#about" class="cell medium-1">About</a>
+				<a href="#ourwork" class="cell medium-1">Portfolio</a>
+				<a href="#contact" class= "cell medium-1">Contact</a>
 			</div>
 		</div>
 	</header>
@@ -36,8 +36,9 @@
 
 				<div class="cell small-6 medium-4 large-10">
 					<div class="h1">
-						Radzio.com<br>
-						Robi super stronki
+						gradient.<br>
+						
+						SIMPLICITY AND AESTHETICS
 					</div>
 				</div>
 			</div>
@@ -48,7 +49,7 @@
 		<div class="sentence">
 			<div class="grid-container">
 				<div class="grid-x grid-padding-x" style="height: 300px;">
-					<div class="cell small-6 medium-4 large-10 text-center ">
+					<div class="cell small-6 medium-4 large-10 align-center text-center ">
 						<div class="h2">
 							co robimy
 						</div>
@@ -79,18 +80,20 @@
 		<div class="grid-container">
 			<div class="grid-x grid-padding-x" style="padding:2rem 0">
 
-				<div class="cell small-6 medium-4 large-10 text-center">
+				<div class="cell small-6 medium-4 large-10 align-center text-center">
 					<div class="h1">
-						Radzio.com<br>
-						bądźmy w kontakcie
+						gradient.<br>
+						simplicity and aesthetics
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="grid-container touch">
-			<div class="grid-padding-x" style="height: 300px;">
-				<div class="cell small-6 something ">
-					Nowe mordeczki na kwadracie mile widziane
+		<div class="touch">
+			<div class="grid-container">
+				<div class="grid-padding-x " style="height: 300px;">
+					<div class="cell small-6 medium-4 large-10 align-center text-center">
+						we are open to new ideas and projects. tell us how we can solve your problem
+					</div>
 				</div>
 			</div>
 		</div>
@@ -114,13 +117,16 @@
 
 
 	<!-- //////////////////////////////foto1///////////////////////// -->
-	<div id="ourwork" class="grid-container">
-		<div class="grid-x grid-padding-x" style="padding:2rem 0">
-			<div class="cell small-6 medium-4 large-10 work">
-				na robocie
+	<div class="work">
+		<div id="ourwork" class="grid-container">
+			<div class="grid-x grid-padding-x" >
+				<div class="cell small-6 medium-4 large-10 align-center text-center" style="height: 300px;">
+					na robocie
+				</div>
 			</div>
 		</div>
 	</div>
+	
 	<div class="grid-x gallery">
 
 		<div class="cell medium-6">
