--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -32,7 +32,7 @@
 
 	<section id="about-me">
 		<div class="grid-container">
-			<div class="grid-x grid-padding-x text-center" style="padding:2rem 0">
+			<div class="grid-x grid-padding-x text-center align-center" style="padding:2rem 0">
 
 				<div class="cell small-6 medium-4 large-10">
 					<div class="h1">
@@ -119,8 +119,8 @@
 	<!-- //////////////////////////////foto1///////////////////////// -->
 	<div class="work">
 		<div id="ourwork" class="grid-container">
-			<div class="grid-x grid-padding-x" >
-				<div class="cell small-6 medium-4 large-10 align-center text-center" style="height: 300px;">
+			<div class="grid-x grid-padding-x align-middle text-center" >
+				<div class="cell small-6 medium-4 large-10 " style="height: 300px;">
 					na robocie
 				</div>
 			</div>
