--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -9,8 +9,8 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital@1&family=Montserrat:wght@200&display=swap"
 		rel="stylesheet">
-	<link rel="stylesheet" href="FirstWebsite.css">
 	<link rel="stylesheet" href="foundation.min.css">
+	<link rel="stylesheet" href="FirstWebsite.css">
 
 	<title>Rado</title>
 
@@ -118,12 +118,9 @@
 
 	<!-- //////////////////////////////foto1///////////////////////// -->
 	<div class="work">
-		<div id="ourwork" class="grid-container">
-			<div class="grid-x grid-padding-x align-midle text-center" >
-				<div class="cell small-6 medium-4 large-10 " style="height: 300px;">
-					na robocie
-				</div>
-			</div>
+		<div id="ourwork" class="grid-container text-center">
+			<div class="h1">Na Robocie</div>
+			<div class="h3">Pracujemy ostro</div>
 		</div>
 	</div>
 	
