--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -117,42 +117,43 @@
 
 
 	<!-- //////////////////////////////foto1///////////////////////// -->
-	<div class="work">
-		<div id="ourwork" class="grid-container text-center">
+	<section id="ourwork">
+		<div class="grid-container text-center">
 			<div class="h1">Na Robocie</div>
 			<div class="h3">Pracujemy ostro</div>
 		</div>
-	</div>
+	</section>
 	
-	<div class="grid-x gallery">
-
-		<div class="cell medium-6">
-			<img src="images/222.jpg"><br>
-			<div class="description">
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi magnam quibusdam aut sunt repudiandae ad
-				facere veritatis expedita dignissimos, est deleniti saepe cumque aliquid architecto quos ullam
-				voluptatem ipsa ratione.
+	<div class="grid-container">
+		<div class="grid-x gallery">
+			<div class="cell medium-6">
+				<img src="images/222.jpg"><br>
+				<div class="description">
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi magnam quibusdam aut sunt repudiandae ad
+					facere veritatis expedita dignissimos, est deleniti saepe cumque aliquid architecto quos ullam
+					voluptatem ipsa ratione.
+				</div>
 			</div>
-		</div>
-
-		<div class="cell medium-6">
-			<img src="images/111.jpg"><br>
-			<div class="description">
-				Siaba daba
+	
+			<div class="cell medium-6">
+				<img src="images/111.jpg"><br>
+				<div class="description">
+					Siaba daba
+				</div>
 			</div>
-		</div>
-
-		<div class="cell medium-6">
-			<img src="images/333.jpg"><br>
-			<div class="description">
-				yyyyyyyyyy
+	
+			<div class="cell medium-6">
+				<img src="images/333.jpg"><br>
+				<div class="description">
+					yyyyyyyyyy
+				</div>
 			</div>
-		</div>
-
-		<div class="cell medium-6">
-			<img src="images/444.jpg"><br>
-			<div class="description">
-				xxxxxxxxxxx
+	
+			<div class="cell medium-6">
+				<img src="images/444.jpg"><br>
+				<div class="description">
+					xxxxxxxxxxx
+				</div>
 			</div>
 		</div>
 	</div>
