--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -22,10 +22,10 @@
 	<header>
 		<div class="grid-container">
 			<div class="grid-x grid-padding-x">
-				<a href="#about-me" class="cell medium-9">Radzio.com</a>
+				<a href="#about-me" class="cell medium-9">Codethinkin.</a>
 				<a href="#about" class="cell medium-1">About</a>
 				<a href="#ourwork" class="cell medium-1">Portfolio</a>
-				<a href="#contact" class= "cell medium-1">Contact</a>
+				<a href="#contact" class="cell medium-1">Contact</a>
 			</div>
 		</div>
 	</header>
@@ -36,8 +36,8 @@
 
 				<div class="cell small-6 medium-4 large-10">
 					<div class="h1">
-						gradient.<br>
-						
+						Codethinkin.<br>
+
 						SIMPLICITY AND AESTHETICS
 					</div>
 				</div>
@@ -45,13 +45,31 @@
 		</div>
 	</section>
 
+
 	<section id="about">
+
+		<div class="grid-container">
+			<div class="grid-x grid-padding-x text-center align-center" style="padding:2rem 0">
+
+				<div class="cell small-6 medium-4 large-10">
+					<div class="h1">
+						Codethinkin.<br>
+						<div class="h7">
+						scope of our services:
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
 		<div class="sentence">
 			<div class="grid-container">
 				<div class="grid-x grid-padding-x" style="height: 300px;">
-					<div class="cell small-6 medium-4 large-10 align-center text-center ">
-						<div class="h2">
-							co robimy
+					<div class="cell small-6 medium-4 large-10 align-center text-center" style="padding:4rem 0">
+						<div class="h7">
+							Codethinkin specializes in website design and development as well
+							iOS/Android mobile apps/games, Windows/macOS/Linux-AppImage desktop apps
 						</div>
 					</div>
 				</div>
@@ -80,9 +98,9 @@
 		<div class="grid-container">
 			<div class="grid-x grid-padding-x" style="padding:2rem 0">
 
-				<div class="cell small-6 medium-4 large-10 align-center text-center">
+				<div class="cell small-6 medium-4 large-10 align-middle text-center">
 					<div class="h1">
-						gradient.<br>
+						Codethinkin.<br>
 						simplicity and aesthetics
 					</div>
 				</div>
@@ -90,9 +108,11 @@
 		</div>
 		<div class="touch">
 			<div class="grid-container">
-				<div class="grid-padding-x " style="height: 300px;">
-					<div class="cell small-6 medium-4 large-10 align-center text-center">
-						we are open to new ideas and projects. tell us how we can solve your problem
+				<div class="grid-padding-x " style="height: 300px; padding:2rem 0">
+					<div class="cell small-6 medium-4 large-10 align-middle text-center">
+						<div class="h7">
+							We are open to new ideas and projects. Tell us how we can solve your problem.
+						</div>
 					</div>
 				</div>
 			</div>
@@ -118,37 +138,38 @@
 
 	<!-- //////////////////////////////foto1///////////////////////// -->
 	<section id="ourwork">
-		<div class="grid-container text-center">
-			<div class="h1">Na Robocie</div>
-			<div class="h3">Pracujemy ostro</div>
+		<div class="grid-container text-center align-middle">
+			<div class="h1">our projects</div>
+			<div class="h7">Each project is characterized by an individualized approach to the client. Our goal is to create an aesthetic project tailored to the customer's needs.</div>
 		</div>
 	</section>
-	
+
 	<div class="grid-container">
 		<div class="grid-x gallery">
 			<div class="cell medium-6">
 				<img src="images/222.jpg"><br>
 				<div class="description">
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi magnam quibusdam aut sunt repudiandae ad
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi magnam quibusdam aut sunt repudiandae
+					ad
 					facere veritatis expedita dignissimos, est deleniti saepe cumque aliquid architecto quos ullam
 					voluptatem ipsa ratione.
 				</div>
 			</div>
-	
+
 			<div class="cell medium-6">
 				<img src="images/111.jpg"><br>
 				<div class="description">
 					Siaba daba
 				</div>
 			</div>
-	
+
 			<div class="cell medium-6">
 				<img src="images/333.jpg"><br>
 				<div class="description">
 					yyyyyyyyyy
 				</div>
 			</div>
-	
+
 			<div class="cell medium-6">
 				<img src="images/444.jpg"><br>
 				<div class="description">
