--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -122,11 +122,11 @@
 				<div class="grid-x align-center text-center">
 					<div class="cell medium-4 ">
 						<img src="images/email.png" width="50" height="33"><br>
-						email us
+						codethinkin1@gmail.com
 					</div>
 					<div class="cell medium-4 ">
 						<img src="images/phone.png" width="50" height="33"><br>
-						phone us
+						698351524
 					</div>
 				</div>
 			</div>
