--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -32,13 +32,14 @@
 
 	<section id="about-me">
 		<div class="grid-container">
-			<div class="grid-x grid-padding-x text-center align-center" style="padding:2rem 0">
+			<div class="grid-x grid-padding-x text-center align-center" style="padding:2rem 0; height: 350px " >
 
 				<div class="cell small-6 medium-4 large-10">
 					<div class="h1">
 						Codethinkin.<br>
-
+						<div class="grid x align-middle h7" >
 						SIMPLICITY AND AESTHETICS
+						<div/>
 					</div>
 				</div>
 			</div>
@@ -49,9 +50,9 @@
 	<section id="about">
 
 		<div class="grid-container">
-			<div class="grid-x grid-padding-x text-center align-center" style="padding:2rem 0">
+			<div class="grid-x grid-padding-x text-center align-center">
 
-				<div class="cell small-6 medium-4 large-10">
+				<div class="cell small-6 medium-4 large-10 " style="padding:4rem 0">
 					<div class="h1">
 						Codethinkin.<br>
 						<div class="h7">
@@ -66,7 +67,7 @@
 		<div class="sentence">
 			<div class="grid-container">
 				<div class="grid-x grid-padding-x" style="height: 300px;">
-					<div class="cell small-6 medium-4 large-10 align-center text-center" style="padding:4rem 0">
+					<div class="cell small-12  align-center text-center" style="padding:4rem 0">
 						<div class="h7">
 							Codethinkin specializes in website design and development as well
 							iOS/Android mobile apps/games, Windows/macOS/Linux-AppImage desktop apps
@@ -77,8 +78,8 @@
 		</div>
 
 		<div class="grid-container graphics">
-			<div class="grid-x align-middle text-center">
-				<div class="cell medium-4 ">
+			<div class="grid-x align-middle text-center" >
+				<div class="cell medium-4 " style="padding:2rem 0; height: 150px ">
 					<img src="images/develop.png" width="50" height="33"><br>
 					developing
 				</div>
@@ -138,13 +139,13 @@
 
 	<!-- //////////////////////////////foto1///////////////////////// -->
 	<section id="ourwork">
-		<div class="grid-container text-center align-middle">
+		<div class="grid-container text-center align-middle"style="height: 150px;" >
 			<div class="h1">our projects</div>
 			<div class="h7">Each project is characterized by an individualized approach to the client. Our goal is to create an aesthetic project tailored to the customer's needs.</div>
 		</div>
 	</section>
 
-	<div class="grid-container">
+	
 		<div class="grid-x gallery">
 			<div class="cell medium-6">
 				<img src="images/222.jpg"><br>
@@ -177,7 +178,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+
 	<!-- /////////////////////////////////contact//////////////////// -->
 
 
