--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -22,17 +22,28 @@
 	<header>
 		<div class="grid-container">
 			<div class="grid-x grid-padding-x">
-				<a href="#about-me" class="cell medium-9">Codethinkin.</a>
-				<a href="#about" class="cell medium-1">About</a>
-				<a href="#ourwork" class="cell medium-1">Portfolio</a>
-				<a href="#contact" class="cell medium-1">Contact</a>
+				<a href="#about-me" class="cell medium-5">
+					<span>Codethinkin.</span>
+				</a>
+				<a href="#about" class="cell small-2">
+					<span>About</span>
+				</a>
+				<a href="#ourwork" class="cell small-2">
+					<span>Portfolio</span>
+				</a>
+				<a href="#contact" class="cell small-2">
+					<span>Contact</span>
+				</a>
+				<a href="#contact" class="cell small-1">
+					<span>Pl/Eng</span>
+				</a>
 			</div>
 		</div>
 	</header>
 
 	<section id="about-me">
 		<div class="grid-container">
-			<div class="grid-x grid-padding-x text-center align-center" style="padding:2rem 0; height: 350px " >
+			<div class="grid-x grid-padding-x text-center align-center" style="padding:5rem 0; height: 350px " >
 
 				<div class="cell small-6 medium-4 large-10">
 					<div class="h1">
@@ -97,9 +108,9 @@
 
 	<section id="contact" class="interested">
 		<div class="grid-container">
-			<div class="grid-x grid-padding-x" style="padding:2rem 0">
+			<div class="grid-x grid-padding-x" style="padding:4rem 0">
 
-				<div class="cell small-6 medium-4 large-10 align-middle text-center">
+				<div class="cell small-6 medium-4 large-12 align-middle text-center">
 					<div class="h1">
 						Codethinkin.<br>
 						simplicity and aesthetics
@@ -111,7 +122,7 @@
 			<div class="grid-container">
 				<div class="grid-padding-x " style="height: 300px; padding:2rem 0">
 					<div class="cell small-6 medium-4 large-10 align-middle text-center">
-						<div class="h7">
+						<div class="h7" style="padding:5rem 0; " >
 							We are open to new ideas and projects. Tell us how we can solve your problem.
 						</div>
 					</div>
@@ -121,11 +132,11 @@
 		<div class="email">
 			<div class="grid-container">
 				<div class="grid-x align-center text-center">
-					<div class="cell medium-4 ">
+					<div class="cell small-6 ">
 						<img src="images/email.png" width="50" height="33"><br>
 						codethinkin1@gmail.com
 					</div>
-					<div class="cell medium-4 ">
+					<div class="cell small-6  ">
 						<img src="images/phone.png" width="50" height="33"><br>
 						698351524
 					</div>
