--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -67,7 +67,7 @@
 					<div class="h1">
 						Codethinkin.<br>
 						<div class="h7">
-						scope of our services:
+						Skill set:
 						</div>
 					</div>
 				</div>
@@ -80,8 +80,9 @@
 				<div class="grid-x grid-padding-x" style="height: 300px;">
 					<div class="cell small-12  align-center text-center" style="padding:4rem 0">
 						<div class="h7">
-							Codethinkin specializes in website design and development as well
-							iOS/Android mobile apps/games, Windows/macOS/Linux-AppImage desktop apps
+							Codethinkin specializes not only in the design of websites but also in the development of iOS/Android mobile apps/games, Windows/macOS and Linux desktop apps AppImage.<br>
+							Our mission is to provide effective technology along with universal creativity and functionalities.<br>
+							Our software is responsive and can be used on any device. It is also smooth and easy to take.
 						</div>
 					</div>
 				</div>
@@ -113,7 +114,7 @@
 				<div class="cell small-6 medium-4 large-12 align-middle text-center">
 					<div class="h1">
 						Codethinkin.<br>
-						simplicity and aesthetics
+						<div class="h7"> We invite you to get in touch with us.</div>
 					</div>
 				</div>
 			</div>
@@ -123,7 +124,7 @@
 				<div class="grid-padding-x " style="height: 300px; padding:2rem 0">
 					<div class="cell small-6 medium-4 large-10 align-middle text-center">
 						<div class="h7" style="padding:5rem 0; " >
-							We are open to new ideas and projects. Tell us how we can solve your problem.
+							We’re excited for challenges in the new project. Let’s talk about your vision!
 						</div>
 					</div>
 				</div>
@@ -151,8 +152,9 @@
 	<!-- //////////////////////////////foto1///////////////////////// -->
 	<section id="ourwork">
 		<div class="grid-container text-center align-middle"style="height: 150px;" >
-			<div class="h1">our projects</div>
-			<div class="h7">Each project is characterized by an individualized approach to the client. Our goal is to create an aesthetic project tailored to the customer's needs.</div>
+			<div class="h1">Our work</div>
+			<div class="h7">Each project is characterized by an individualized approach to the client. Our goal is to create
+			an aesthetic and simple design tailored to your needs.</div>
 		</div>
 	</section>
 
@@ -161,31 +163,28 @@
 			<div class="cell medium-6">
 				<img src="images/222.jpg"><br>
 				<div class="description">
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi magnam quibusdam aut sunt repudiandae
-					ad
-					facere veritatis expedita dignissimos, est deleniti saepe cumque aliquid architecto quos ullam
-					voluptatem ipsa ratione.
+					Programming games at various stages of readiness and that includes advanced mechanics.
 				</div>
 			</div>
 
 			<div class="cell medium-6">
 				<img src="images/111.jpg"><br>
 				<div class="description">
-					Siaba daba
+					Website design
 				</div>
 			</div>
 
 			<div class="cell medium-6">
 				<img src="images/333.jpg"><br>
 				<div class="description">
-					yyyyyyyyyy
+					Web application design
 				</div>
 			</div>
 
 			<div class="cell medium-6">
 				<img src="images/444.jpg"><br>
 				<div class="description">
-					xxxxxxxxxxx
+					Mobile applications
 				</div>
 			</div>
 		</div>
