--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -23,7 +23,7 @@
 		<div class="grid-container">
 			<div class="grid-x grid-padding-x">
 				<a href="#about-me" class="cell medium-5">
-					<span>Codethinkin.</span>
+					<span>CodeThinkin.</span>
 				</a>
 				<a href="#about" class="cell small-2">
 					<span>About</span>
@@ -33,10 +33,6 @@
 				</a>
 				<a href="#contact" class="cell small-2">
 					<span>Contact</span>
-				</a>
-				<a href="#contact" class="cell small-1">
-					<span>Pl/Eng</span>
-				</a>
 			</div>
 		</div>
 	</header>
@@ -47,7 +43,7 @@
 
 				<div class="cell small-6 medium-4 large-10">
 					<div class="h1">
-						Codethinkin.<br>
+						CodeThinkin.<br>
 						<div class="grid x align-middle h7" >
 						SIMPLICITY AND AESTHETICS
 						<div/>
@@ -65,7 +61,7 @@
 
 				<div class="cell small-6 medium-4 large-10 " style="padding:4rem 0">
 					<div class="h1">
-						Codethinkin.<br>
+						CodeThinkin.<br>
 						<div class="h7">
 						Skill set:
 						</div>
@@ -78,9 +74,9 @@
 		<div class="sentence">
 			<div class="grid-container">
 				<div class="grid-x grid-padding-x" style="height: 300px;">
-					<div class="cell small-12  align-center text-center" style="padding:4rem 0">
+					<div class="cell small-12  align-center text-center frame" style="padding:4rem 0">
 						<div class="h7">
-							Codethinkin specializes not only in the design of websites but also in the development of iOS/Android mobile apps/games, Windows/macOS and Linux desktop apps AppImage.<br>
+							CodeThinkin specializes not only in the design of websites but also in the development of iOS/Android mobile apps/games, Windows/macOS and Linux desktop apps AppImage.<br>
 							Our mission is to provide effective technology along with universal creativity and functionalities.<br>
 							Our software is responsive and can be used on any device. It is also smooth and easy to take.
 						</div>
@@ -109,11 +105,11 @@
 
 	<section id="contact" class="interested">
 		<div class="grid-container">
-			<div class="grid-x grid-padding-x" style="padding:4rem 0">
+			<div class="grid-x grid-padding-x" style="padding:6rem 0; height: 460px">
 
 				<div class="cell small-6 medium-4 large-12 align-middle text-center">
 					<div class="h1">
-						Codethinkin.<br>
+						CodeThinkin.<br>
 						<div class="h7"> We invite you to get in touch with us.</div>
 					</div>
 				</div>
@@ -122,7 +118,7 @@
 		<div class="touch">
 			<div class="grid-container">
 				<div class="grid-padding-x " style="height: 300px; padding:2rem 0">
-					<div class="cell small-6 medium-4 large-10 align-middle text-center">
+					<div class="cell small-3 medium-4 large-10 align-middle text-center frame">
 						<div class="h7" style="padding:5rem 0; " >
 							We’re excited for challenges in the new project. Let’s talk about your vision!
 						</div>
@@ -135,7 +131,7 @@
 				<div class="grid-x align-center text-center">
 					<div class="cell small-6 ">
 						<img src="images/email.png" width="50" height="33"><br>
-						codethinkin1@gmail.com
+						CodeThinkin1@gmail.com
 					</div>
 					<div class="cell small-6  ">
 						<img src="images/phone.png" width="50" height="33"><br>
