--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -39,18 +39,18 @@
 
 	<section id="about-me">
 		<div class="grid-container">
-			<div class="grid-x grid-padding-x text-center align-center" style="padding:5rem 0; height: 350px " >
+			<div class="grid-x grid-padding-x text-center align-center" style="padding:12rem 0; height: 550px ">
 
 				<div class="cell small-6 medium-4 large-10">
 					<div class="h1">
 						CodeThinkin.<br>
-						<div class="grid x align-middle h7" >
-						SIMPLICITY AND AESTHETICS
-						<div/>
+						<div class="grid x align-middle h7">
+							SIMPLICITY AND AESTHETICS
+							<div />
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
 	</section>
 
 
@@ -59,11 +59,11 @@
 		<div class="grid-container">
 			<div class="grid-x grid-padding-x text-center align-center">
 
-				<div class="cell small-6 medium-4 large-10 " style="padding:4rem 0">
+				<div class="cell small-6 medium-4 large-10 " style="padding:10rem 0; height: 460px;">
 					<div class="h1">
 						CodeThinkin.<br>
 						<div class="h7">
-						Skill set:
+							Skill set:
 						</div>
 					</div>
 				</div>
@@ -72,13 +72,16 @@
 
 
 		<div class="sentence">
-			<div class="grid-container">
-				<div class="grid-x grid-padding-x" style="height: 300px;">
+			<div class="grid-container " style="height: 400px;">
+				<div class="grid-x grid-padding-x" style="height: 300px; padding: 4rem 0;">
 					<div class="cell small-12  align-center text-center frame" style="padding:4rem 0">
 						<div class="h7">
-							CodeThinkin specializes not only in the design of websites but also in the development of iOS/Android mobile apps/games, Windows/macOS and Linux desktop apps AppImage.<br>
-							Our mission is to provide effective technology along with universal creativity and functionalities.<br>
-							Our software is responsive and can be used on any device. It is also smooth and easy to take.
+							CodeThinkin specializes not only in the design of websites but also in the development of
+							iOS/Android mobile apps/games, Windows/macOS and Linux desktop apps AppImage.<br>
+							Our mission is to provide effective technology along with universal creativity and
+							functionalities.<br>
+							Our software is responsive and can be used on any device. It is also smooth and easy to
+							take.
 						</div>
 					</div>
 				</div>
@@ -86,7 +89,7 @@
 		</div>
 
 		<div class="grid-container graphics">
-			<div class="grid-x align-middle text-center" >
+			<div class="grid-x align-middle text-center">
 				<div class="cell medium-4 " style="padding:2rem 0; height: 150px ">
 					<img src="images/develop.png" width="50" height="33"><br>
 					developing
@@ -119,7 +122,7 @@
 			<div class="grid-container">
 				<div class="grid-padding-x " style="height: 300px; padding:2rem 0">
 					<div class="cell small-3 medium-4 large-10 align-middle text-center frame">
-						<div class="h7" style="padding:5rem 0; " >
+						<div class="h7" style="padding:5rem 0; ">
 							We’re excited for challenges in the new project. Let’s talk about your vision!
 						</div>
 					</div>
@@ -128,7 +131,7 @@
 		</div>
 		<div class="email">
 			<div class="grid-container">
-				<div class="grid-x align-center text-center">
+				<div class="grid-x align-center text-center" style="height: 150px; padding:2rem 0">
 					<div class="cell small-6 ">
 						<img src="images/email.png" width="50" height="33"><br>
 						CodeThinkin1@gmail.com
@@ -147,43 +150,57 @@
 
 	<!-- //////////////////////////////foto1///////////////////////// -->
 	<section id="ourwork">
-		<div class="grid-container text-center align-middle"style="height: 150px;" >
+		<div class="grid-container text-center align-middle" style="height: 300px;">
 			<div class="h1">Our work</div>
-			<div class="h7">Each project is characterized by an individualized approach to the client. Our goal is to create
-			an aesthetic and simple design tailored to your needs.</div>
 		</div>
+		<div class="touch">
+			<div class="grid-container">
+				<div class="grid-padding-x " style="height: 300px; padding:2rem 0">
+					<div class="cell small-3 medium-4 large-10 align-middle text-center frame">
+						<div class="h7" style="padding:5rem 0; ">
+							Each project is characterized by an individualized approach to the client. Our goal is to create an aesthetic and simple design tailored to your needs.
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+		
+
+
 	</section>
 
-	
-		<div class="grid-x gallery">
-			<div class="cell medium-6">
-				<img src="images/222.jpg"><br>
-				<div class="description">
-					Programming games at various stages of readiness and that includes advanced mechanics.
-				</div>
-			</div>
 
-			<div class="cell medium-6">
-				<img src="images/111.jpg"><br>
-				<div class="description">
-					Website design
-				</div>
-			</div>
-
-			<div class="cell medium-6">
-				<img src="images/333.jpg"><br>
-				<div class="description">
-					Web application design
-				</div>
-			</div>
-
-			<div class="cell medium-6">
-				<img src="images/444.jpg"><br>
-				<div class="description">
-					Mobile applications
-				</div>
+	<div class="grid-x gallery">
+		<div class="cell medium-6">
+			<img src="images/222.jpg"><br>
+			<div class="description">
+				Programming games at various stages of readiness and that includes advanced mechanics.
 			</div>
 		</div>
+
+		<div class="cell medium-6">
+			<img src="images/111.jpg"><br>
+			<div class="description">
+				Website design
+			</div>
+		</div>
+
+		<div class="cell medium-6">
+			<img src="images/333.jpg"><br>
+			<div class="description">
+				Web application design
+			</div>
+		</div>
+
+		<div class="cell medium-6">
+			<img src="images/444.jpg"><br>
+			<div class="description">
+				Mobile applications
+			</div>
+		</div>
+	</div>
 
 	<!-- /////////////////////////////////contact//////////////////// -->
 
