--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -23,7 +23,7 @@
 		<div class="grid-container">
 			<div class="grid-x grid-padding-x">
 				<a href="#about-me" class="cell medium-5">
-					<span>CodeThinkin.</span>
+					<h1>Code<span class=„gradient”>Thinkin.</span></h1>
 				</a>
 				<a href="#about" class="cell small-2">
 					<span>About</span>
@@ -69,42 +69,74 @@
 				</div>
 			</div>
 		</div>
+	</section>
 
-
-		<div class="sentence">
-			<div class="grid-container " style="height: 400px;">
-				<div class="grid-x grid-padding-x" style="height: 300px; padding: 4rem 0;">
-					<div class="cell small-12  align-center text-center frame" style="padding:4rem 0">
-						<div class="h7">
-							CodeThinkin specializes not only in the design of websites but also in the development of
-							iOS/Android mobile apps/games, Windows/macOS and Linux desktop apps AppImage.<br>
-							Our mission is to provide effective technology along with universal creativity and
-							functionalities.<br>
-							Our software is responsive and can be used on any device. It is also smooth and easy to
-							take.
-						</div>
+	<div class="sentence">
+		<div class="grid-container " style="height: 400px;">
+			<div class="grid-x grid-padding-x" style="height: 300px; padding: 4rem 0;">
+				<div class="cell small-12  align-center text-center frame" style="padding:4rem 0">
+					<div class="h7">
+						CodeThinkin specializes not only in the design of websites but also in the development
+						of
+						iOS/Android mobile apps/games, Windows/macOS and Linux desktop apps AppImage.<br>
+						Our mission is to provide effective technology along with universal creativity and
+						functionalities.<br>
+						Our software is responsive and can be used on any device. It is also smooth and easy to
+						take.
 					</div>
 				</div>
 			</div>
 		</div>
+	</div>
 
-		<div class="grid-container graphics">
-			<div class="grid-x align-middle text-center">
-				<div class="cell medium-4 " style="padding:2rem 0; height: 150px ">
-					<img src="images/develop.png" width="50" height="33"><br>
-					developing
-				</div>
-				<div class="cell medium-4 ">
-					<img src="images/brand.png" width="50" height="33"><br>
-					branding
-				</div>
-				<div class="cell medium-4 ">
-					<img src="images/art.png" width="50" height="33"><br>
-					art
+
+	<div class=" graphics">
+		<div class="grid-x align-middle text-center align-center"  style="padding:1rem 0; height: 200px">
+			<div class="cell medium-3 ">
+				<img src="images/develop.png" width="50" height="33"><br>
+				CONCEPTUAL DESIGN <br>
+				We create conceptual graphics and a preliminary design of the application/website for approval by the client
+			</div>
+			<div class="cell medium-3 ">
+				<img src="images/brand.png" width="50" height="33"><br>
+				REALIZATION AND TECHNOLOGY<br>
+				On the basis of the project, we select the appropriate technology that strengthens the functionality and shortens the implementation time
+			</div>
+			<div class="cell medium-3 ">
+				<img src="images/art.png" width="50" height="33"><br>
+				PRESENTATION<br>
+				During the work, we consult the progress and possible changes of the project on an ongoing basis
+			</div>
+		</div>
+	</div>
+	</section>
+
+
+
+
+
+
+	<!-- //////////////////////////////foto1///////////////////////// -->
+	<section id="ourwork">
+		<div class="grid-container text-center align-middle" style="height: 200px;">
+			<div class="h1">Our work</div>
+		</div>
+	</section>
+	<div class="touch">
+		<div class="grid-container">
+			<div class="grid-padding-x " style="height: 300px; padding:2rem 0">
+				<div class="cell small-3 medium-4 large-10 align-middle text-center frame">
+					<div class="h7" style="padding:5rem 0; ">
+						Each project is characterized by an individualized approach to the client. Our goal is to
+						create an aesthetic and simple design tailored to your needs.
+					</div>
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
+
+
+
 
 	<section id="contact" class="interested">
 		<div class="grid-container">
@@ -146,30 +178,6 @@
 	</section>
 
 
-
-
-	<!-- //////////////////////////////foto1///////////////////////// -->
-	<section id="ourwork">
-		<div class="grid-container text-center align-middle" style="height: 300px;">
-			<div class="h1">Our work</div>
-		</div>
-		<div class="touch">
-			<div class="grid-container">
-				<div class="grid-padding-x " style="height: 300px; padding:2rem 0">
-					<div class="cell small-3 medium-4 large-10 align-middle text-center frame">
-						<div class="h7" style="padding:5rem 0; ">
-							Each project is characterized by an individualized approach to the client. Our goal is to create an aesthetic and simple design tailored to your needs.
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-
-		
-
-
-	</section>
 
 
 	<div class="grid-x gallery">
