--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -109,6 +109,11 @@
 			</div>
 		</div>
 	</div>
+	<div class="touch">
+		<div class="grid-padding-x " style="height: 50px;">
+		</div>
+	</div>
+	
 	</section>
 
 
@@ -118,7 +123,7 @@
 
 	<!-- //////////////////////////////foto1///////////////////////// -->
 	<section id="ourwork">
-		<div class="grid-container text-center align-middle" style="height: 200px;">
+		<div class="grid-container text-center align-middle" style="height: 100px;">
 			<div class="h1">Our work</div>
 		</div>
 	</section>
