--- a/FirstWebsite.html
+++ b/FirstWebsite.html
@@ -73,9 +73,10 @@
 
 	<div class="sentence">
 		<div class="grid-container " style="height: 400px;">
-			<div class="grid-x grid-padding-x" style="height: 300px; padding: 4rem 0;">
+			<div class="grid-x grid-padding-x" style="height: 300px; padding: 2rem 0;">
 				<div class="cell small-12  align-center text-center frame" style="padding:4rem 0">
 					<div class="h7">
+						<div class="h2">About us:</div>
 						CodeThinkin specializes not only in the design of websites but also in the development
 						of
 						iOS/Android mobile apps/games, Windows/macOS and Linux desktop apps AppImage.<br>
@@ -129,9 +130,10 @@
 	</section>
 	<div class="touch">
 		<div class="grid-container">
-			<div class="grid-padding-x " style="height: 300px; padding:2rem 0">
+			<div class="grid-padding-x " style="height: 300px; padding:1rem 0">
 				<div class="cell small-3 medium-4 large-10 align-middle text-center frame">
-					<div class="h7" style="padding:5rem 0; ">
+					<div class="h7" style="padding:2rem 0; ">
+						<div class="h2">Our work:</div>
 						Each project is characterized by an individualized approach to the client. Our goal is to
 						create an aesthetic and simple design tailored to your needs.
 					</div>
@@ -155,11 +157,13 @@
 				</div>
 			</div>
 		</div>
+	</section>
 		<div class="touch">
 			<div class="grid-container">
 				<div class="grid-padding-x " style="height: 300px; padding:2rem 0">
 					<div class="cell small-3 medium-4 large-10 align-middle text-center frame">
 						<div class="h7" style="padding:5rem 0; ">
+							<div class="h2">Contact with us:</div>
 							We’re excited for challenges in the new project. Let’s talk about your vision!
 						</div>
 					</div>
@@ -180,7 +184,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	
 
 
 
